[package]
name = "klok-applicatie"
version = "0.1.0"
edition = "2024"

[dependencies]
copypasta = "0.8"
glium = { version = "0.35.0", default-features = true }
image = "0.23"

imgui-glium-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glium-renderer" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", version = "0.12", features = [
    "tables-api",
] }
imgui-winit-support = { version = "0.13", git = "https://github.com/imgui-rs/imgui-winit-support" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
bitfield = "0.19.4"
